--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ axum = "0.7.5"
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 tokio = { version = "1.37.0", features = ["full"] }
+rusqlite = { version = "0.32.1", features = ["bundled"] }
