--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 tokio = { version = "1.37.0", features = ["full"] }
 rusqlite = { version = "0.32.1", features = ["bundled"] }
+tower-http = { version = "0.5.2", features = ["fs"] }
