--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio = { version = "1.37.0", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["fs"] }
 tokio-rusqlite = "0.5.1"
 rusqlite = { version = ">0.1", features = ["bundled", "trace"] }
+reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
