--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ tower-http = { version = "0.5.2", features = ["fs"] }
 tokio-rusqlite = "0.5.1"
 rusqlite = { version = ">0.1", features = ["bundled", "trace"] }
 reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
+anyhow = "1.0.88"
+tracing-subscriber = "0.3.18"
+tracing = "0.1.40"
