--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ reqwest = { version = "0.12.7", features = ["blocking", "json", "multipart"] }
 anyhow = "1.0.88"
 tracing-subscriber = "0.3.18"
 tracing = "0.1.40"
+clap = { version = "4.5.19", features = ["derive"] }
